Update latest java 21 feature and clean up unused code